agni/web/static/agni_map.css
html body main #main-row {
	width: 100%;
}

body {
	overflow: hidden;
}

head {
	padding: 0;
}

.fixed-height {
	height: 100%;
	width: 100vh;
}

.container {
	margin: 0 auto;
	max-width: 100vw;
	width: 90% !important;
}

#main-row {
	display: flex;
	height: calc(100vh - 64px);
	overflow: hidden;
}

#mapdisplay {
	height: 100%;
	z-index: 0;
}

@media screen and (max-width: 600px){
	#main-row {
		flex-direction: column;
	}
}

#mapcontrols {
	padding-top: 1em;
	/*overflow: auto;
	scrollbar-width: thin;*/
}

.simplebar-scrollbar {
	width: 8px;
}

.fullwidth-btn {
	width: 100%;
}

.toast-text i {
	margin-right: 1ex;
}
/*
.switch {
	padding:5px 5px;
	margin: 10px;
}
*/

.info {
    padding: 6px 8px;
    font: 14px/16px Arial, Helvetica, sans-serif;
    background: white;
    background: rgba(255,255,255,0.8);
    box-shadow: 0 0 15px rgba(0,0,0,0.2);
    border-radius: 5px;
}
.info h4 {
    margin: 0 0 5px;
    color: #777;
}

